git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "a186323"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "a186323"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/perl6/doc/lib/Language/functions.pod
+++ b/perl6/doc/lib/Language/functions.pod
@@ -30,11 +30,11 @@ subroutine using the C<sub> declarator:
 To have the subroutine take arguments, a L<signature|Signature> goes
 between the subroutine's name and its body, in parentheses:
 
-    =for code :allow<B L>
-    sub exclaim B<($phrase)> {
-        say $phrase L<~> "!!!!"
-    }
-    exclaim "Howdy, World";
+=for code :allow<B L>
+sub exclaim B<($phrase)> {
+    say $phrase L<~> "!!!!"
+}
+exclaim "Howdy, World";
 
 By default, subroutines are L<lexically scoped|/syntax/my>. That is
 C<sub foo {...}> is the same as C<my sub foo {...}> and is only
@@ -562,3 +562,5 @@ Coercion types are supposed to work wherever types work, but Rakudo currently
 (2015.02) only implements them for subroutine parameters.
 
 =end pod
+
+# vim: expandtab shiftwidth=4 ft=perl6
