--- a/perl6/doc/lib/Language/io.pod
+++ b/perl6/doc/lib/Language/io.pod
@@ -6,9 +6,8 @@
 
 Here we present a quick overview of the file-related input/output
 operations, detailed documentation can be found in the documentation for the
-L<IO|/type/IO> role, as well as the L<IO::Handle|/type/IO::Handle>,
-L<IO::Path|/type/IO::Path>, and L<IO::FileTestable|/type/IO::FileTestable>
-types.
+L<IO|/type/IO> role, as well as the L<IO::Handle|/type/IO::Handle> and
+L<IO::Path|/type/IO::Path> types.
 
 =head1 Reading from files
 
@@ -37,12 +36,12 @@ the file for you.
 
 Of course, we also have the option to read a file line-by-line.
 
-	for 'huge-csv'.IO.lines -> $line {
-		# Do something with $line
-	}
-	# or if you'll be processing later
-	my @lines = 'huge-csv'.IO.lines;
+    for 'huge-csv'.IO.lines -> $line {
+        # Do something with $line
+    }
 
+    # or if you'll be processing later
+    my @lines = 'huge-csv'.IO.lines;
 
 =head1 Writing to files
 
