--- a/perl6/doc/lib/Language/quoting.pod
+++ b/perl6/doc/lib/Language/quoting.pod
@@ -227,7 +227,7 @@ The contents of the heredoc only begin on the next line, so you can (and
 should) finish the line.
 
 =begin code
-my $escaped = escaque(q:to/TERMINATOR/, language => 'html');
+my $escaped = my-escaping-function(q:to/TERMINATOR/, language => 'html');
 Here are the contents of the heredoc.
 Potentially multiple lines.
 TERMINATOR
