--- a/perl6/doc/lib/Type/Blob.pod
+++ b/perl6/doc/lib/Type/Blob.pod
@@ -91,6 +91,6 @@ containing the packed bytes.
 
 The template string consists of zero or more units that begin with an ASCII
 letter, and are optionally followed by a quantifier.  For details, see
-L<unpack|/method unpack>.
+L<unpack|/routine/unpack>.
 
 =end pod
