--- a/perl6/doc/lib/Type/Cool.pod
+++ b/perl6/doc/lib/Type/Cool.pod
@@ -701,6 +701,19 @@ the list of lines.
     say lines("a\nb\n").join('|');          # a|b
     say "some\nmore\nlines".lines.elems;    # 3
 
+
+This method can be used as part of an C<IO::Path> to process a file
+line-by-line, since C<IO::Path> objects inherit from C<Cool>, e.g.:
+
+=begin code
+for 'huge-csv'.IO.lines -> $line {
+        # Do something with $line
+}
+
+# or if you'll be processing later
+my @lines = 'huge-csv'.IO.lines;
+=end code
+
 =head2 method words
 
     method words(Int() $limit)
