--- a/perl6/doc/lib/Type/Date.pod
+++ b/perl6/doc/lib/Type/Date.pod
@@ -65,13 +65,13 @@ For example
 
     method succ(Date:D:) returns Date:D
 
-Returns the following day
+Returns the following day.
 
-=head2 method prev
+=head2 method pred
 
-    method prev(Date:D:) return Date:D
+    method pred(Date:D:) return Date:D
 
-Returns the previous day
+Returns the previous day.
 
 =head2 method Str
 
