--- a/perl6/doc/lib/Type/Exception.pod
+++ b/perl6/doc/lib/Type/Exception.pod
@@ -55,10 +55,18 @@ backtrace.
 
 =head2 method fail
 
-    method fail(Exception:D:)
+    sub    fail(*@text)
+    sub    fail(Exception $e)
+    method fail(Exception:D $e:)
 
-Same as C<fail $exception>; i.e., it exits the calling C<Routine>
-and returns the exception wrapped in a L<Failure> object.
+Exits the calling C<Routine> and returns a L<Failure> object wrapping the
+exception C<$e> - or, for the C<*@text> form, an L<X::AdHoc> exception
+constructed from the concatenation of C<@text>.
+
+    sub copy-directory-tree ($dir) {
+        fail "$dir is not a directory" if !$dir.IO.d;
+        ...
+    }
 
 =head2 method gist
 
