--- a/perl6/doc/lib/Type/IO.pod
+++ b/perl6/doc/lib/Type/IO.pod
@@ -332,8 +332,7 @@ output.
 
 =head1 Related classes
 
-See also the related classes L<IO::FileTestable>, L<IO::Handle> and
-L<IO::Path>.
+See also the related classes L<IO::Handle> and L<IO::Path>.
 
 =end pod
 
