--- a/perl6/doc/lib/Type/IO/Handle.pod
+++ b/perl6/doc/lib/Type/IO/Handle.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE Opened file or stream
 
-   class IO::Handle does IO::FileTestable { }
+   class IO::Handle does IO { }
 
 =head1 Methods
 
@@ -81,8 +81,7 @@ Will close a previously opened filehandle.
 
 =head1 Related roles and classes
 
-See also the related role L<IO> and the related classes L<IO::FileTestable>
-and L<IO::Path>.
+See also the related role L<IO> and the related class L<IO::Path>.
 
 =end pod
 
