--- a/perl6/doc/lib/Type/Label.pod
+++ b/perl6/doc/lib/Type/Label.pod
@@ -27,12 +27,12 @@ Those label are objects of type C<Label>.
 
     method next(Label:)
 
-Begin the next iteration of the loop assoicated with the label.
+Begin the next iteration of the loop associated with the label.
 
 =head2 method last
 
     method last(Label:)
 
-Terminate the execution of the loop assoicated with the label.
+Terminate the execution of the loop associated with the label.
 
 =end pod
