--- a/perl6/doc/lib/Type/List.pod
+++ b/perl6/doc/lib/Type/List.pod
@@ -123,6 +123,32 @@ Examples:
     > map *.Str.chars, 'hello', 1, 22/7, 42, 'world'
     5 1 8 2 5
 
+C<map> inspects the arity of the code object, and tries to pass as many arguments to it as expected:
+
+    sub b($a, $b) { "$a before $b" };
+    say <a b x y>.map(&b).join(', ');   # a before b, x before y
+
+iterates the list two items at a time.
+
+Note that C<map> does not flatten embedded lists and parcels, so
+
+    ((1, 2), <a b>).map({ .join(',')})
+
+passes C<(1, 2)> and C<< <a b> >> in turn to the block, leading to a total of two iterations and the result list C<"1,2", "a,b">. See L<method flatmap|#method flatmap> for an alternative that flattens.
+
+=head2 method flatmap
+
+    method flatmap(List:D: &code) returns List:D
+
+Like C<map> iterates over the elements of the invocant list, feeding each
+element in turn to the code reference, and assembling the return values from these invocations in a result list.
+
+Unlike C<map> it flattens non-itemized lists and parcels, so
+
+    say ((1, 2), <a b>).flatmap(&uc).join('|');     # 1|2|A|B
+
+invokes C<uc|/type/Str#routine uc> four times.
+
 =head2 routine grep
 
     multi sub    grep(Mu $matcher, *@elems) returns List:D
