--- a/perl6/doc/lib/Type/Proc/Async.pod
+++ b/perl6/doc/lib/Type/Proc/Async.pod
@@ -114,7 +114,7 @@ the program through C<print>, C<say> and C<write>.
 
 =head2 method start
 
-    method start(Proc::Async:D:, :$scheduler = $*SCHEDULER) returns Promise:D
+    method start(Proc::Async:D:, :$scheduler = $*SCHEDULER, :$cwd = $*CWD) returns Promise:D
 
 Initiates spawning of the external program. Returns a promise that will be
 kept with a L<Proc::Status|/type/Proc::Status> object once the external
