--- a/perl6/doc/lib/Type/Proxy.pod
+++ b/perl6/doc/lib/Type/Proxy.pod
@@ -7,7 +7,7 @@
     class Proxy { ... }
 
 A Proxy is an object that allows you to execute whenever a value is retrieved
-from a contaner (C<FETCH>) or when it is set (C<STORE>).
+from a container (C<FETCH>) or when it is set (C<STORE>).
 
 To create a container that returns twice of what was stored in it, you do
 something like this:
