--- a/perl6/doc/lib/Type/Scheduler.pod
+++ b/perl6/doc/lib/Type/Scheduler.pod
@@ -20,7 +20,7 @@ C<Scheduler>
 
 =head2 method uncaught_handler
 
-    method uncaught_handler() is rew
+    method uncaught_handler() is rw
 
 RW-Accessor for the handler that is caught for uncaught exceptions from the
 code that is being scheduled and run.
