--- a/perl6/doc/lib/Type/Str.pod
+++ b/perl6/doc/lib/Type/Str.pod
@@ -385,7 +385,7 @@ There is an in-place syntactic variant of C<subst> spelled
 C<s/matcher/replacement>.
 
 C<$matcher> an be a L<Regex>, or a literal C<Str>. Non-Str matcher arguments
-of type L<Cool> are coerced to to C<Str> for literal matching.
+of type L<Cool> are coerced to C<Str> for literal matching.
 
     my $some-string = "Some foo";
     my $another-string = $some-string.subst(/foo/, "string"); # gives 'Some string'
