--- a/perl6/doc/lib/Type/Supply.pod
+++ b/perl6/doc/lib/Type/Supply.pod
@@ -10,7 +10,9 @@ A supply is a thread-safe, asynchronous data stream like a
 L<Channel|/type/Channel>, but it can have multiple subscribers
 (I<taps>) that all get the same events.
 
-It is central in supporting reactive programming in Perl 6.
+It is a thread-safe implementation of the
+L<Observer Pattern|https://en.wikipedia.org/wiki/Observer_pattern>,
+and central to supporting reactive programming in Perl 6.
 
 C<Supply> is a role, but can be used directly too.
 
