--- a/perl6/doc/lib/Type/Thread.pod
+++ b/perl6/doc/lib/Type/Thread.pod
@@ -32,7 +32,7 @@ my @threads = (^10).map: {
 .finish for @threads;
 =end code
 
-The current thread is availabe in the dynamic variable C<$*THREAD>.
+The current thread is available in the dynamic variable C<$*THREAD>.
 
 =head1 Methods
 
