--- a/perl6/doc/lib/Type/Variable.pod
+++ b/perl6/doc/lib/Type/Variable.pod
@@ -7,7 +7,7 @@
     class Variable { ... }
 
 Variables have a wealth of compile-time information, but at run time, accesses
-to to a variable usually act on the value stored inside the variable, not the
+to a variable usually act on the value stored inside the variable, not the
 variable itself.
 
 Class C<Variable> holds the compile-time information that traits can use to
