--- a/perl6/doc/lib/Language/5to6.pod
+++ b/perl6/doc/lib/Language/5to6.pod
@@ -133,7 +133,7 @@ I<No space allowed after a prefix operator, or before a
 postfix/postcircumfix operator (including array/hash subscripts).>
 
     $seen {$_} ++; # Perl 5
-    $seen{$_}++;   # Perl 6
+    %seen{$_}++;   # Perl 6
 =end item
 
 =begin item
@@ -1134,7 +1134,7 @@ C<is export> role on the relevant subs and I<all> subs with this role are
 then exported.  Hence, the following module C<Bar> exports the subs C<foo>
 and C<bar> but not C<baz>:
 
-    module Bar;
+    unit module Bar;
 
     sub foo($a) is export { say "foo $a" }
     sub bar($b) is export { say "bar $b" }
