--- a/perl6/doc/lib/Language/regexes.pod
+++ b/perl6/doc/lib/Language/regexes.pod
@@ -850,7 +850,9 @@ of an C<m/.../> match or as arguments to a match method.
 
 The C<:continue> or short C<:c> adverb takes an argument. The argument is
 the position where the regex should start to search. By default, it searches
-from the start of the string, but C<:c> overrides that.
+from the start of the string, but C<:c> overrides that. If no position is
+specified for C<:c> it will default to C<0> unless C<$/> is set, in which
+case it defaults to C<$/.to>.
 
     given 'a1xa2' {
         say ~m/a./;         # a1
@@ -935,6 +937,31 @@ abracadabra
 =head1 Look-around assertions
 
 =head2 Lookahead assertions
+
+To check that a pattern appears before another pattern, one can use a
+lookahead assertion via the C<before> assertion.  This has the form:
+
+    <?before pattern>
+
+Thus, to search for the string C<foo> which is immediately followed by the
+string C<bar>, one could use the following regexp:
+
+    rx{ foo <?before bar> }
+
+which one could use like so:
+
+    say "foobar" ~~ rx{ foo <?before bar> };   #->  foo
+
+However, if you want to search for a pattern which is B<not> immediately
+followed by some pattern, then you need to use a negative lookahead
+assertion, this has the form:
+
+    <?!before pattern>
+
+Hence all occurrences of C<foo> which I<is not> before C<bar> would
+be matched by
+
+    rx{ foo <?!before bar> }
 
 =head2 Lookbehind assertions
 
