--- a/ugexe/zef/README.pod
+++ b/ugexe/zef/README.pod
@@ -2,173 +2,270 @@
 
 =encoding utf8
 
-=head2 WARNING
-
-Only mostly works.
-
 =head2 Name
 
 Zef - Perl6 Module Management
 
 =for HTML <a href="https://travis-ci.org/ugexe/zef"><img src="https://travis-ci.org/ugexe/zef.svg?branch=master"></a>
 
-=head2 Description
-
-L<Zef.pm|https://zef.pm/>
-
-L<https://github.com/tony-o/perl-zefserver>
-
-CPAN but better. Maybe?
-
 =head1 USAGE
 
-=head2 Module Management
+=head1 The CLI
 
-    zef install CSV::Parser
     # duh
+    zef -v install CSV::Parser
 
-    zef uninstall CSV::Parser
     # noooooo!
+    zef -v uninstall CSV::Parser
 
-    zef --report install CSV::Parser
     # fire off test reports this time *onomatopoeia of an uzi*
+    zef -v --report install CSV::Parser
 
-    zef search CSV
-    # search modules names for CSV
+    # search for module names matching `CSV::Parser`
+    zef -v search CSV::Parser
 
-=head2 Module Development
-
-    zef build
     # build project in current directory
-    
-    zef test
-    # test project in current directory
-    
-=head1 TOOLS
+    zef -v build
 
-=head2 Zef::Net::HTTP::Client
+    # test project in current directory    
+    zef -v test
 
-Basic http client: Grammar based parser; uses IO::Socket::SSL if available for https.
+=head2 More CLI
+
+=head4 B<install>
+
+Fetch, build, test, optional report, and install.
+
+    # verbose output
+    -v
+
+    # send a test report
+    --report
+
+    # parallel testing and precompilation
+    --async
+
+    # no status bar or other CLI eye candy
+    --boring
+
+    # do everything except the actually install
+    --dry
+
+    # run the tests in a random order instead of sorted
+    --shuffle
+
+    # skip modules with matching names (or any modules depending on them)
+    --ignore=Acme::Virus --ignore=Acme::TakesForever
+
+    # livin that multi thread life
+    zef -v --report --async install HTTP::Server::Threaded
+    
+B<Example>: (note parallelized output format will be improved)
+    
+    $ perl6 -Ilib bin/zef -v install CSV::Parser P6TCI
+    ===> Querying Authority [done]
+    ===> Fetching [done]
+    ===> Fetching OK for: CSV::Parser P6TCI
+    ===> META.info availability OK for: CSV::Parser P6TCI
+    ===> Build directory: /tmp/CSV--Parser/blib
+    Parser.pm # perl6 -I/tmp/CSV--Parser/blib/lib -I/tmp/CSV--Parser/lib -I/tmp/CSV--Parser/lib --target=mbc --output=/tmp/CSV--Parser/blib/lib/CSV/Parser.pm.moarvm lib/CSV/Parser.pm
+    ===> Build directory: /tmp/P6TCI/blib
+    P6TCI.pm6 # perl6 -I/tmp/P6TCI/blib/lib -I/tmp/P6TCI/lib -I/tmp/P6TCI/lib --target=mbc --output=/tmp/P6TCI/blib/lib/P6TCI.pm6.moarvm lib/P6TCI.pm6
+    ===> Building [done]
+    ===> Build OK for: lib/CSV/Parser.pm lib/P6TCI.pm6
+    01_multiline_csv.t  # perl6 --ll-exception -I/tmp/CSV--Parser/blib -I/tmp/CSV--Parser/lib -I/tmp/P6TCI/blib -I/tmp/P6TCI/lib t/01_multiline_csv.t
+    01_multiline_csv.t  # 1..1
+    01_multiline_csv.t  # ok 1 -
+    02_escaped_csv.t    # perl6 --ll-exception -I/tmp/CSV--Parser/blib -I/tmp/CSV--Parser/lib -I/tmp/P6TCI/blib -I/tmp/P6TCI/lib t/02_escaped_csv.t
+    02_escaped_csv.t    # 1..1
+    02_escaped_csv.t    # ok 1 -
+    03_delimiters_csv.t # perl6 --ll-exception -I/tmp/CSV--Parser/blib -I/tmp/CSV--Parser/lib -I/tmp/P6TCI/blib -I/tmp/P6TCI/lib t/03_delimiters_csv.t
+    03_delimiters_csv.t # 1..1
+    03_delimiters_csv.t # ok 1 -
+    04_binary_csv.t     # perl6 --ll-exception -I/tmp/CSV--Parser/blib -I/tmp/CSV--Parser/lib -I/tmp/P6TCI/blib -I/tmp/P6TCI/lib t/04_binary_csv.t
+    04_binary_csv.t     # 1..1
+    04_binary_csv.t     # ok 1 -
+    00-load.t           # perl6 --ll-exception -I/tmp/CSV--Parser/blib -I/tmp/CSV--Parser/lib -I/tmp/P6TCI/blib -I/tmp/P6TCI/lib t/00-load.t
+    00-load.t           # ok 1 - Module loaded.
+    00-load.t           # 1..1
+    ===> Testing [done]
+    ===> Testing OK for: 01_multiline_csv.t 02_escaped_csv.t 03_delimiters_csv.t 04_binary_csv.t 00-load.t
+    ===> Installing [done]
+    ===> Install OK for: CSV::Parser P6TCI
+
+
+=head4 B<smoke>
+
+Tests every module in the ecosystem, ignoring any modules with a name (or dependency name) matching argument C<*@ignores>
+
+    snoop@cali:~/ perl6 -Ilib bin/zef -v --report smoke
+
+    # skip modules with matching names (or any modules depending on them)
+    --ignore=Acme::Virus --ignore=Acme::TakesForever
+
+    # same as install options
+    --boring
+    --smoke
+    --dry
+    -v
+
+=head4 B<search>
+
+Take C<*%args> filters. That is, any C<--[field]="term"> passed will search for "term" in it's META [field].
+
+Add a C<*> to any filter to have the filter apply a C<.starts-with()> filter using the string to the left of the C<*>.
+
+Note: C<*> behaves slightly differently for C<--version>
+
+    # search by name
+    zef -v search Text::Table::Simple            # or zef -v --name="Text::Table::Simple"
+
+    # search by version
+    zef -v --version="*" search                  # Version filter only
+    zef -v --version="*" search HTTP::Server     # Can search for 'whatevers'
+    zef -v --version="0.1" search HTTP::Server   # Version matching
+    zef -v --version="0.1+" search HTTP::Server  # Basic version ranges
+
+    # search by other fields in META
+    zef -v --depends="HTTP::Server" search       # Match `HTTP::Server` inside --`depends`
+
+    # a naive substring search using a wildcard
+    zef -v --depends="HTTP*" search              # Matches anything that $results.starts-with("HTTP")
+
+    # sure
+    zef -v --depends="HTTP::Server" --version="0.1+" search HTTP::Server::Threaded
+
+B<Example>:
+
+    $ perl6 -Ilib bin/zef -v search HTTP*
+    ===> Querying Server [done]
+    ===> Filtering Results [done]
+    ===> Found 13 results
+    ---------------------------------------------------------------------------------------------------------------------------------
+    ID | Package                                      | Version | Description
+    ---------------------------------------------------------------------------------------------------------------------------------
+    1  | HTTP::Server::Simple                         | *       | Simple webserver module, with PSGI support
+    2  | HTTP::UserAgent                              | 1.1.3   | Web user agent
+    3  | HTTP::Easy                                   | *       | HTTP servers made easy, including PSGI
+    4  | HTTP::Status                                 | *       | Get the text message associated with an HTTP status code
+    5  | HTTP::Client                                 | *       | A flexible HTTP Client library
+    6  | HTTP::ParseParams                            | 1.0.0   | cookie/query/post data parsing
+    7  | HTTP::Server::Async                          | 0.1.0   | Asynchronous Base HTTP Server
+    8  | HTTP::Server::Async::Plugins::Router::Simple | 0.1.0   | Basic routing for http server
+    9  | HTTP::Server::Threaded                       | 0.1.0   | Threaded Base HTTP Server
+    10 | HTTP::Server::Router                         | 0.1.0   | Router for HTTP::Server based servers
+    11 | HTTP::Server                                 | 0.1     | role for HTTP::Server so we can have start building out some ser...
+    12 | HTTP::Server::Logger                         | 0.1     | A common log format logger for anything abiding by HTTP::Server
+    13 | HTTP::Headers                                | 0.1     | Tools for working with HTTP message headers
+    ---------------------------------------------------------------------------------------------------------------------------------
+
+=head4 B<info>
+
+Given C<*@modules> it will list a formatted version of each's C<META.info> data.
+    
+    # basics
+    zef info JSON::Tiny
+
+    # -v to also list:
+    #   * `provides` section
+    #   * Entire dependency chain, ordered and grouped into build levels
+    zef -v info Task::Star
+
+B<Example>:
+
+    $ perl6 -Ilib bin/zef -v info HTTP::UserAgent
+    ===> Querying Server [done]
+    ===> Filtering Results [done]
+    ===> Found 1 results
+    [HTTP::UserAgent]
+    # Version: 1.1.3
+    # Author:        github:sergot
+    # Description:   Web user agent
+    # Source-url:    git://github.com/sergot/http-useragent.git
+    # Provides: 9 items
+    #       HTTP::Cookies
+    #       HTTP::Message
+    #       HTTP::UserAgent::Common
+    #       HTTP::Header::Field
+    #       HTTP::Request
+    #       HTTP::Header
+    #       HTTP::Cookie
+    #       HTTP::Response
+    #       HTTP::UserAgent
+    # Depends: 7 items
+    #   0)  HTTP::Status
+    #   1)  File::Temp
+    #   2)  DateTime::Parse
+    #   3)  IO::Capture::Simple
+    #   4)  Encode
+    #   5)  MIME::Base64
+    #   6)  URI
+    # Depends-chain:
+    #   0.0) DateTime::Parse
+    #   0.1) Encode
+    #   0.2) File::Directory::Tree
+    #   0.3) HTTP::Status
+    #   0.4) IO::Capture::Simple
+    #   0.5) MIME::Base64
+    #   0.6) URI
+    #   1.0) File::Temp
+    #   2.0) HTTP::UserAgent
+
+=head1 INCLUDED TOOLS
+
+=head2 Zef::Net::HTTP
+
+HTTP library interfaces and Grammars.
 
     use Zef::Net::HTTP::Client;
     
-    my $client = Zef::Net::HTTP::Client.new;
+    my $client = Zef::Net::HTTP::Client.new(:auto-check);
 
     my $body     = to-json({ term => "zef" });
-    my $response = $client.post("http://zef.pm/api/search", :$body);
+    my $response = $client.post("http://httpbin.org/post", :$body);
 
     # .content takes care of encoding. The .body attribute has the raw data for manual processing
     my $json     = from-json($response.content);
 
     my $response = $client.get("https://www.google.com");
-    say $reponse.content; # apply encoding/chunked/etc to $.body
+    say $reponse.content; # returns $.body with encoding/chunked/etc applied
 
-=head2 Zef::Net::HTTP::Response
+or build your own client by satisfying the interface requirements during object construction:
 
-=head2 Zef::Net::HTTP::Request
+    use Zef::Net::HTTP::Client;
 
-=head2 Zef::Net::HTTP::Grammar
+    use Different::Responder;
+    use Different::Requestor;
+    use You::Get::The::Idea;
 
-=head2 Zef::Net::URI
-
-=head2 Zef::Net::URI::Grammar
-
-=head2 Zef::Utils::Base64
-
-Base64 encoding/decoding
-
-    use Zef::Utils::Base64;
-
-    my $b64 = Zef::Utils::Base64.new;
-
-    say $b64.b64encode("Perl");
-    # UGVybA==
-    
-    say $b64.b64decode("UGVybA==").decode('utf8');
-    # Perl
-    
-=head2 Zef::Utils::PathTools;
-
-Uses MONKEY-TYPING to add additional methods to L<IO::Path|http://doc.perl6.org/type/IO::Path>.
-
-    use Zef::Utils::PathTools;
-    
-    say $*CWD.ls(:f, d => False)    
-    # "/home/user/perl6/zef/META6.json".IO "/home/user/perl6/zef/META.info".IO "/home/user/perl6/zef/README.pod".IO
-
-    $*CWD.ls(:f, :r, :a)
-    # list all files recursively including dot files
-    
-    $*CWD.rm(:f, :d, :r);
-    # (rm -rf) recursively delete files and folders
-    
-    $*CWD.mkdirs("new-dir/new-sub-dir");
-    # (original mkdir does this already on MoarVM, but not JVM)
-    
-=head3 Methods/Subroutines
-
-B<Note>: I<All methods have a corresponding subroutine>.
-
-=head4 ls(IO::Path:D $path, :f => True, :d => True, :r => False, :a => False)
-
-List files and/or folders for a path.
-
-    # ls FILTERS
-    :f - file
-    :d - directory
-    :r - recursive
-    :a - all (otherwise dot files/folders ignored)
-    
-=head4 rm(IO::Path:D $path, :f => True, :d => False, :r => False, :a => False)
-
-Delete files and/or folders for a given path.
-
-    # rm FILTERS
-    :f - file
-    :d - directory
-    :r - recursive
-    :a - all (otherwise dot files/folders ignored)
-    
-=head4 mkdirs(IO::Path:D $path, :mode => 0o777)
-
-Create new path, including non-existant parent directories.
-
-=head2 Zef::Utils::Depends
-
-Utilities for extracting dependencies from Perl6 projects/code.
-    
-    use Zef::Utils::Depends;
-    use Zef::Utils::PathTools; # for .ls
-    
-    my @libs    = $lib-dir.IO.ls(:r, :f, d => False);
-    my @depends = Zef::Utils::Depends.build-dep-tree: extract-deps(@libs);
-
-=head3 Methods/Subroutines
-
-=head4 extract-deps(*@paths)
-
-Attempt to extract dependencies via source parsing.
-
-    use Zef::Utils::Depends;
-    
-    say extract-deps("lib/Zef.pm6").perl
-    # ({:dependencies(["Zef::Authority", "Zef::Builder", "Zef::Config", "Zef::Exception", "Zef::Getter", "Zef::Installer", "Zef::Reporter", "Zef::Tester", "Zef::Uninstaller", "Zef::Utils::Base64", "Zef::Utils::Depends", "Zef::Utils::PathTools"]), :file("lib/Zef.pm6"), :name("Zef")},)
-
-=head4 topological-sort(*@meta-files, :$target)
-
-Build dependency order, in levels, from a list of dependency meta files. If :$target is passed then the tree will built with :$target as the base node. Otherwise the order will determine a base node(s) in the form of @level[*-1]
-
-=head4 build-dep-tree(*@meta-files, :$target)
-
-Build dependency order/tree from a list of dependency meta files. If :$target is passed then the tree will built with :$target as the base node.
+    Zef::Net::HTTP::Client.new(              # Zef::Net::HTTP interface type
+        responder   => Different::Responder, # HTTP::Response
+        requestor   => Different::Requestor, # HTTP::Request
+        transporter => You::Get::The::Idea   # HTTP::Transport
+    );
 
 =head1 NOTES
 
+=head2 Links
+
+L<Zef.pm|https://zef.pm/>
+
+L<http://modules.perl6.org/>
+
 =head2 Full Flex
 
+ * ✓ No external dependencies
+ * ✓ CompUnitRepo::Local based
+ * ✓ Test reporting to P6C servers
  * Test reporting to Zef servers
  * Rotating OS smoke testing server integration
  * ✓ Use perl6 github ecosystem as an additional authority
- * ✓ Small http client
+ * ✓ HTTP library
+ * HPACK/HTTP2 compatability
+ * ✓ Parallelized testing
+ * TAP Harness/Grammar
+ * ✓ Parallelized building
+ * ✓ Basic CLI overlay/hud
+ * Pure Perl6 decompression/git-clone library
 
 =cut
