--- a/perl6/doc/lib/Language/objects.pod
+++ b/perl6/doc/lib/Language/objects.pod
@@ -617,7 +617,7 @@ simply define your class instead as:
     }
 
 When a role is applied to a second role, the actual application is delayed
-until the second class is applied to a class, at which point both roles are
+until the second role is applied to a class, at which point both roles are
 applied to the class. Thus
 
     role R1 {
