--- a/perl6/doc/lib/Language/syntax.pod
+++ b/perl6/doc/lib/Language/syntax.pod
@@ -244,7 +244,7 @@ Binary data of L<type Blob|/type/Blob> can be written as C<:base{data}>, so
 =head3 Number literals
 
 Number literals are generally specified in base ten, unless a prefix like
-C<0x> (heB<x>ademcimal, base 16), C<0o> (B<o>ctal, base 8) or C<0b>
+C<0x> (heB<x>adecimal, base 16), C<0o> (B<o>ctal, base 8) or C<0b>
 (B<b>inary, base 2) or an explicit base in adverbial notation like
 C<< :16<A0> >> specifies it otherwise. Unlike other programming languages,
 leading zeros do I<not> indicate base 8; instead a compile-time warning is
