--- a/perl6/doc/lib/Language/variables.pod
+++ b/perl6/doc/lib/Language/variables.pod
@@ -119,6 +119,17 @@ assigning to one after you've defined it:
 
     θ = 3; # Dies with the error "Cannot modify an immutable Num"
 
+Sigilless variables do not enforce context, so they can be used to pass
+something on as-is:
+
+    sub logged(&f, |args) {
+        say('Calling ' ~ &f.name ~ ' with arguments ' ~ args.perL)
+        my \result = f(|args);
+        #  ^^^^^^^ not enforcing any context here
+        say(&f.name ~ ' returned ' ~ result.perl)
+        return |result;
+    }
+
 =head1 Twigils
 
 Twigils influence the scoping of a variable. Please be aware that twigils
