--- a/perl6/doc/lib/Type/Channel.pod
+++ b/perl6/doc/lib/Type/Channel.pod
@@ -27,7 +27,7 @@ one or more producers to one or more consumers.
     method send(Channel:D: \item)
 
 Enqueues an item into the channel. Throws an exception of type
-C<X::Channel::SendOnClosed> if the channel has been closed already.
+L<X::Channel::SendOnClosed> if the channel has been closed already.
 
 =head2 method receive
 
@@ -37,8 +37,9 @@ Receives and removes an item from the channel. It blocks if no item is
 present, waiting for a C<send> from another thread.
 
 Throws an exception of
-type C<X::Channel::ReceiveOnClosed> if the channel has been closed, and the
-last item has been removed already.
+type L<X::Channel::ReceiveOnClosed> if the channel has been closed, and the
+last item has been removed already, or if C<close> is called while C<receive>
+is waiting for an item to arrive.
 
 If the channel has been marked as erratic with method C<fail>, and the last
 item has been removed, throws the argument that was given to C<fail> as an
