--- a/perl6/doc/lib/Type/Proc.pod
+++ b/perl6/doc/lib/Type/Proc.pod
@@ -47,6 +47,7 @@ second command, you can do
             Str:D :$enc = 'UTF-8',
             Str:D $nl = "\n",
             :$cwd = $*CWD,
+            Hash() :$env = %*ENV,
             *@args
     )  returns Proc:D
 
@@ -75,9 +76,9 @@ merged in C<$proc.out>.
 
 =head2 method spawn
 
-    method spawn(Proc:D *@args ($, *@), :$cwd = $*CWD) returns Bool:D
+    method spawn(Proc:D *@args ($, *@), :$cwd = $*CWD, Hash() :$env = %*ENV) returns Bool:D
 
-Runs the C<Proc> objects with the given command, argument list, and working directory.
+Runs the C<Proc> objects with the given command, argument list, working directory and environment.
 
 =head2 method exitcode
 
