--- a/perl6/doc/lib/Type/Int.pod
+++ b/perl6/doc/lib/Type/Int.pod
@@ -82,7 +82,7 @@ number.
     multi sub    unival(Int:D)  returns Numeric
     multi method unival(Int:D:) returns Numeric
 
-Returns the number reprsented by the Unicode codepoint with the given integer
+Returns the number represented by the Unicode codepoint with the given integer
 number, or L<NaN> if it does not represent a number.
 
 =head1 Operators
